Fixed object reference in touch events Swipe register Started position WIP Temp return visual MainScreen overflow hidden for no scroll

--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ h3
     display: flex;
     flex-direction: column;
     height: 100vh;
+    overflow: hidden;
     /* grid-template-rows: 10vh; */
 }
 
